# linear_regression_with_sgd

./: .gitignore  README.md
c/: CMakeLists.txt  Makefile.old  main.c
c/src/: helpers.c  helpers.h  losses.c  losses.h  matrix.c  matrix.h  sgd.c  sgd.h  stats.c  stats.h
c/tests/: test_helpers.c  test_losses.c  test_main.c  test_matrix.c  test_stats.c
python/: main.py
python/src/: gradient_descent.py  helpers.py  losses.py  metrics.py
